--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1594,6 +1594,7 @@ time {
   padding-bottom: 2ch;
   box-shadow: 0px 3px 5px 0px #ccc;
   background-color: #fdfcfc;
+  z-index: 1;
 }
 
 .menu-list {
