--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,11 +1,5 @@
 @import "~purecss/build/pure.css";
-/******************************************************************************
-    => Color definitions
-*******************************************************************************/
-$background-color: hsl(10, 20%, 99%);
-$foreground-color: hsl(10, 10%, 13%);
-$primary-color   : #0fa0ce; 
-$admin-color     : #ee1155;
+@import "colors.scss";
 
 
 /******************************************************************************
@@ -113,6 +107,7 @@ time {
     padding-bottom: 2ch;
     box-shadow: 0px 3px 5px 0px #ccc;
     background-color: $background-color;
+    z-index: 1;
 }
 
 .menu-list {
