--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -2,6 +2,16 @@
 @import "./colors.scss";
 @import "./prism-theme.scss";
 
+/******************************************************************************
+    => Font
+*******************************************************************************/
+@font-face {
+  font-family: 'Raleway';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Raleway'),
+    url('/fonts/Raleway-Regular.ttf') format('truetype'),
+}
 
 /******************************************************************************
     => General
@@ -10,6 +20,7 @@ body {
     color: $foreground-color;
     background-color: $background-color;
     overflow-y: scroll;
+    font-family: 'Raleway';
 }
 
 .container {
