--- a/resources/sass/fonts.scss
+++ b/resources/sass/fonts.scss
@@ -8,25 +8,25 @@
   font-family: 'Hack';
   font-style: normal;
   font-weight: 700;
-  src: local('Hack Bold'), url('/fonts/Hack-Bold.ttf') format('truetype');
+  src: local('Hack Bold'), url('https://static.danielcortes.xyz/fonts/Hack-Bold.ttf') format('truetype');
 }
 @font-face {
   font-family: 'Hack';
   font-style: italic;
   font-weight: 700;
-  src: local('Hack Bold Italic'), url('/fonts/Hack-BoldItalic.ttf') format('truetype');
+  src: local('Hack Bold Italic'), url('https://static.danielcortes.xyz/fonts/Hack-BoldItalic.ttf') format('truetype');
 }
 @font-face {
   font-family: 'Hack';
   font-style: italic;
   font-weight: 400;
-  src: local('Hack Italic'), url('/fonts/Hack-Italic.ttf') format('truetype');
+  src: local('Hack Italic'), url('https://static.danielcortes.xyz/fonts/Hack-Italic.ttf') format('truetype');
 }
 @font-face {
   font-family: 'Hack';
   font-style: normal;
   font-weight: 400;
-  src: local('Hack'), url('/fonts/Hack-Regular.ttf') format('truetype');
+  src: local('Hack'), url('https://static.danielcortes.xyz/fonts/Hack-Regular.ttf') format('truetype');
 }
 
 /******************************************************************************
@@ -36,67 +36,67 @@
   font-family: 'OpenSans';
   font-style: normal;
   font-weight: 700;
-  src: local('OpenSans Bold'), url('/fonts/OpenSans-Bold.ttf') format('truetype');
+  src: local('OpenSans Bold'), url('https://static.danielcortes.xyz/fonts/OpenSans-Bold.ttf') format('truetype');
 }
 @font-face {
   font-family: 'OpenSans';
   font-style: italic;
   font-weight: 700;
-  src: local('OpenSans Bold Italic'), url('/fonts/OpenSans-BoldItalic.ttf') format('truetype');
+  src: local('OpenSans Bold Italic'), url('https://static.danielcortes.xyz/fonts/OpenSans-BoldItalic.ttf') format('truetype');
 }
 @font-face {
   font-family: 'OpenSans';
   font-style: normal;
   font-weight: 800;
-  src: local('OpenSans Extra Bold'), url('/fonts/OpenSans-ExtraBold.ttf') format('truetype');
+  src: local('OpenSans Extra Bold'), url('https://static.danielcortes.xyz/fonts/OpenSans-ExtraBold.ttf') format('truetype');
 }
 @font-face {
   font-family: 'OpenSans';
   font-style: italic;
   font-weight: 800;
-  src: local('OpenSans Extra Bold Italic'), url('/fonts/OpenSans-ExtraBoldItalic.ttf') format('truetype');
+  src: local('OpenSans Extra Bold Italic'), url('https://static.danielcortes.xyz/fonts/OpenSans-ExtraBoldItalic.ttf') format('truetype');
 }
 @font-face {
   font-family: 'OpenSans';
   font-style: italic;
   font-weight: 400;
-  src: local('OpenSans Italic'), url('/fonts/OpenSans-Italic.ttf') format('truetype');
+  src: local('OpenSans Italic'), url('https://static.danielcortes.xyz/fonts/OpenSans-Italic.ttf') format('truetype');
 }
 @font-face {
   font-family: 'OpenSans';
   font-style: normal;
   font-weight: 300;
-  src: local('OpenSans Light'), url('/fonts/OpenSans-Light.ttf') format('truetype');
+  src: local('OpenSans Light'), url('https://static.danielcortes.xyz/fonts/OpenSans-Light.ttf') format('truetype');
 }
 @font-face {
   font-family: 'OpenSans';
   font-style: italic;
   font-weight: 300;
-  src: local('OpenSans Light Italic'), url('/fonts/OpenSans-LightItalic.ttf') format('truetype');
+  src: local('OpenSans Light Italic'), url('https://static.danielcortes.xyz/fonts/OpenSans-LightItalic.ttf') format('truetype');
 }
 @font-face {
   font-family: 'OpenSans';
   font-style: normal;
   font-weight: 400;
-  src: local('OpenSans'), url('/fonts/OpenSans-Regular.ttf') format('truetype');
+  src: local('OpenSans'), url('https://static.danielcortes.xyz/fonts/OpenSans-Regular.ttf') format('truetype');
 }
 @font-face {
   font-family: 'OpenSans';
   font-style: normal;
   font-weight: 600;
-  src: local('OpenSans SemiBold'), url('/fonts/OpenSans-SemiBold.ttf') format('truetype');
+  src: local('OpenSans SemiBold'), url('https://static.danielcortes.xyz/fonts/OpenSans-SemiBold.ttf') format('truetype');
 }
 @font-face {
   font-family: 'OpenSans';
   font-style: italic;
   font-weight: 600;
-  src: local('OpenSans Bold'), url('/fonts/OpenSans-SemiBoldItalic.ttf') format('truetype');
+  src: local('OpenSans Bold'), url('https://static.danielcortes.xyz/fonts/OpenSans-SemiBoldItalic.ttf') format('truetype');
 }
 @font-face {
   font-family: 'OpenSans';
   font-style: normal;
   font-weight: 700;
-  src: local('OpenSans Bold'), url('/fonts/OpenSans-Bold.ttf') format('truetype');
+  src: local('OpenSans Bold'), url('https://static.danielcortes.xyz/fonts/OpenSans-Bold.ttf') format('truetype');
 }
 
 /******************************************************************************
@@ -106,108 +106,108 @@
   font-family: 'Raleway';
   font-style: normal;
   font-weight: 900;
-  src: local('Raleway Black'), url('/fonts/Raleway-Black.ttf') format('truetype');
+  src: local('Raleway Black'), url('https://static.danielcortes.xyz/fonts/Raleway-Black.ttf') format('truetype');
 }
 
 @font-face {
   font-family: 'Raleway';
   font-style: italic;
   font-weight: 900;
-  src: local('Raleway Black Italic'), url('/fonts/Raleway-BlackItalic.ttf') format('truetype');
+  src: local('Raleway Black Italic'), url('https://static.danielcortes.xyz/fonts/Raleway-BlackItalic.ttf') format('truetype');
 }
 @font-face {
   font-family: 'Raleway';
   font-style: normal;
   font-weight: 700;
-  src: local('Raleway Bold'), url('/fonts/Raleway-Bold.ttf') format('truetype');
+  src: local('Raleway Bold'), url('https://static.danielcortes.xyz/fonts/Raleway-Bold.ttf') format('truetype');
 }
 @font-face {
   font-family: 'Raleway';
   font-style: italic;
   font-weight: 700;
-  src: local('Raleway Bold Italic'), url('/fonts/Raleway-BoldItalic.ttf') format('truetype');
+  src: local('Raleway Bold Italic'), url('https://static.danielcortes.xyz/fonts/Raleway-BoldItalic.ttf') format('truetype');
 }
 @font-face {
   font-family: 'Raleway';
   font-style: normal;
   font-weight: 800;
-  src: local('Raleway Extra Bold'), url('/fonts/Raleway-ExtraBold.ttf') format('truetype');
+  src: local('Raleway Extra Bold'), url('https://static.danielcortes.xyz/fonts/Raleway-ExtraBold.ttf') format('truetype');
 }
 @font-face {
   font-family: 'Raleway';
   font-style: italic;
   font-weight: 800;
-  src: local('Raleway Extra Bold Italic'), url('/fonts/Raleway-ExtraBoldItalic.ttf') format('truetype');
+  src: local('Raleway Extra Bold Italic'), url('https://static.danielcortes.xyz/fonts/Raleway-ExtraBoldItalic.ttf') format('truetype');
 }
 @font-face {
   font-family: 'Raleway';
   font-style: normal;
   font-weight: 200;
-  src: local('Raleway Extra Light'), url('/fonts/Raleway-ExtraLight.ttf') format('truetype');
+  src: local('Raleway Extra Light'), url('https://static.danielcortes.xyz/fonts/Raleway-ExtraLight.ttf') format('truetype');
 }
 @font-face {
   font-family: 'Raleway';
   font-style: italic;
   font-weight: 200;
-  src: local('Raleway Extra Light Italic'), url('/fonts/Raleway-ExtraLightItalic.ttf') format('truetype');
+  src: local('Raleway Extra Light Italic'), url('https://static.danielcortes.xyz/fonts/Raleway-ExtraLightItalic.ttf') format('truetype');
 }
 @font-face {
   font-family: 'Raleway';
   font-style: italic;
   font-weight: 400;
-  src: local('Raleway Italic'), url('/fonts/Raleway-Italic.ttf') format('truetype');
+  src: local('Raleway Italic'), url('https://static.danielcortes.xyz/fonts/Raleway-Italic.ttf') format('truetype');
 }
 @font-face {
   font-family: 'Raleway';
   font-style: normal;
   font-weight: 300;
-  src: local('Raleway Light'), url('/fonts/Raleway-Light.ttf') format('truetype');
+  src: local('Raleway Light'), url('https://static.danielcortes.xyz/fonts/Raleway-Light.ttf') format('truetype');
 }
 @font-face {
   font-family: 'Raleway';
   font-style: italic;
   font-weight: 300;
-  src: local('Raleway Light Italic'), url('/fonts/Raleway-LightItalic.ttf') format('truetype');
+  src: local('Raleway Light Italic'), url('https://static.danielcortes.xyz/fonts/Raleway-LightItalic.ttf') format('truetype');
 }
 @font-face {
   font-family: 'Raleway';
   font-style: normal;
   font-weight: 500;
-  src: local('Raleway Medium'), url('/fonts/Raleway-Medium.ttf') format('truetype');
+  src: local('Raleway Medium'), url('https://static.danielcortes.xyz/fonts/Raleway-Medium.ttf') format('truetype');
 }
 @font-face {
   font-family: 'Raleway';
   font-style: italic;
   font-weight: 500;
-  src: local('Raleway Medium Italic'), url('/fonts/Raleway-MediumItalic.ttf') format('truetype');
+  src: local('Raleway Medium Italic'), url('https://static.danielcortes.xyz/fonts/Raleway-MediumItalic.ttf') format('truetype');
 }
 @font-face {
   font-family: 'Raleway';
   font-style: normal;
   font-weight: 400;
-  src: local('Raleway Regular'), url('/fonts/Raleway-Regular.ttf') format('truetype');
+  src: local('Raleway Regular'), url('https://static.danielcortes.xyz/fonts/Raleway-Regular.ttf') format('truetype');
 }
 @font-face {
   font-family: 'Raleway';
   font-style: normal;
   font-weight: 600;
-  src: local('Raleway Semi Bold'), url('/fonts/Raleway-SemiBold.ttf') format('truetype');
+  src: local('Raleway Semi Bold'), url('https://static.danielcortes.xyz/fonts/Raleway-SemiBold.ttf') format('truetype');
 }
 @font-face {
   font-family: 'Raleway';
   font-style: italic;
   font-weight: 600;
-  src: local('Raleway Semi Bold Italic'), url('/fonts/Raleway-SemiBoldItalic.ttf') format('truetype');
+  src: local('Raleway Semi Bold Italic'), url('https://static.danielcortes.xyz/fonts/Raleway-SemiBoldItalic.ttf') format('truetype');
 }
 @font-face {
   font-family: 'Raleway';
   font-style: normal;
   font-weight: 100;
-  src: local('Raleway Thin'), url('/fonts/Raleway-Thin.ttf') format('truetype');
+  src: local('Raleway Thin'), url('https://static.danielcortes.xyz/fonts/Raleway-Thin.ttf') format('truetype');
 }
 @font-face {
   font-family: 'Raleway';
   font-style: italic;
   font-weight: 100;
-  src: local('Raleway Thin Italic'), url('/fonts/Raleway-ThinItalic.ttf') format('truetype');
+  src: local('Raleway Thin Italic'), url('https://static.danielcortes.xyz/fonts/Raleway-ThinItalic.ttf') format('truetype');
 }
