--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -90,6 +90,8 @@ time {
     border: 1px $foreground-color solid;
     box-shadow: none;
     background-color: lighten($background-color, 10% );
+    font-family: "Hack", monospace;
+
 }
 
 .pure-form label {
