--- a/src/assets/codehilite.css
+++ b/src/assets/codehilite.css
@@ -1,4 +1,215 @@
 /******************************************************************************
     => CODEHILITE
 *******************************************************************************/
-.codehilite .hll{background-color:#f1fa8c}.codehilite{background:#282a36;color:#f8f8f2}.codehilite .c{color:#6272a4}.codehilite .err,.codehilite .g{color:#f8f8f2}.codehilite .k{color:#ff79c6}.codehilite .l,.codehilite .n{color:#f8f8f2}.codehilite .o{color:#ff79c6}.codehilite .p,.codehilite .x{color:#f8f8f2}.codehilite .ch,.codehilite .cm{color:#6272a4}.codehilite .cp{color:#ff79c6}.codehilite .c1,.codehilite .cpf,.codehilite .cs{color:#6272a4}.codehilite .gd{color:#8b080b}.codehilite .ge{color:#f8f8f2;text-decoration:underline}.codehilite .gr{color:#f8f8f2}.codehilite .gh,.codehilite .gi{color:#f8f8f2;font-weight:700}.codehilite .go{color:#44475a}.codehilite .gp,.codehilite .gs,.codehilite .gt{color:#f8f8f2}.codehilite .gu{color:#f8f8f2;font-weight:700}.codehilite .kc{color:#ff79c6}.codehilite .kd{color:#8be9fd;font-style:italic}.codehilite .kn,.codehilite .kp,.codehilite .kr{color:#ff79c6}.codehilite .kt{color:#8be9fd}.codehilite .ld{color:#f8f8f2}.codehilite .m{color:#bd93f9}.codehilite .s{color:#f1fa8c}.codehilite .na{color:#50fa7b}.codehilite .nb{color:#8be9fd;font-style:italic}.codehilite .nc{color:#50fa7b}.codehilite .nd,.codehilite .ne,.codehilite .ni,.codehilite .no{color:#f8f8f2}.codehilite .nf{color:#50fa7b}.codehilite .nl{color:#8be9fd;font-style:italic}.codehilite .nn,.codehilite .nx,.codehilite .py{color:#f8f8f2}.codehilite .nt{color:#ff79c6}.codehilite .nv{color:#8be9fd;font-style:italic}.codehilite .ow{color:#ff79c6}.codehilite .w{color:#f8f8f2}.codehilite .mb,.codehilite .mf,.codehilite .mh,.codehilite .mi,.codehilite .mo{color:#bd93f9}.codehilite .dl,.codehilite .s1,.codehilite .s2,.codehilite .sa,.codehilite .sb,.codehilite .sc,.codehilite .sd,.codehilite .se,.codehilite .sh,.codehilite .si,.codehilite .sr,.codehilite .ss,.codehilite .sx{color:#f1fa8c}.codehilite .bp{color:#f8f8f2;font-style:italic}.codehilite .fm{color:#50fa7b}.codehilite .vc,.codehilite .vg,.codehilite .vi,.codehilite .vm{color:#8be9fd;font-style:italic}.codehilite .il{color:#bd93f9}
+.codehilite .hll {
+    background-color: #f1fa8c
+}
+
+.codehilite {
+    background: #282a36;
+    color: #f8f8f2
+}
+
+.codehilite .c {
+    color: #6272a4
+}
+
+.codehilite .err,
+.codehilite .g {
+    color: #f8f8f2
+}
+
+.codehilite .k {
+    color: #ff79c6
+}
+
+.codehilite .l,
+.codehilite .n {
+    color: #f8f8f2
+}
+
+.codehilite .o {
+    color: #ff79c6
+}
+
+.codehilite .p,
+.codehilite .x {
+    color: #f8f8f2
+}
+
+.codehilite .ch,
+.codehilite .cm {
+    color: #6272a4
+}
+
+.codehilite .cp {
+    color: #ff79c6
+}
+
+.codehilite .c1,
+.codehilite .cpf,
+.codehilite .cs {
+    color: #6272a4
+}
+
+.codehilite .gd {
+    color: #8b080b
+}
+
+.codehilite .ge {
+    color: #f8f8f2;
+    text-decoration: underline
+}
+
+.codehilite .gr {
+    color: #f8f8f2
+}
+
+.codehilite .gh,
+.codehilite .gi {
+    color: #f8f8f2;
+    font-weight: 700
+}
+
+.codehilite .go {
+    color: #44475a
+}
+
+.codehilite .gp,
+.codehilite .gs,
+.codehilite .gt {
+    color: #f8f8f2
+}
+
+.codehilite .gu {
+    color: #f8f8f2;
+    font-weight: 700
+}
+
+.codehilite .kc {
+    color: #ff79c6
+}
+
+.codehilite .kd {
+    color: #8be9fd;
+    font-style: italic
+}
+
+.codehilite .kn,
+.codehilite .kp,
+.codehilite .kr {
+    color: #ff79c6
+}
+
+.codehilite .kt {
+    color: #8be9fd
+}
+
+.codehilite .ld {
+    color: #f8f8f2
+}
+
+.codehilite .m {
+    color: #bd93f9
+}
+
+.codehilite .s {
+    color: #f1fa8c
+}
+
+.codehilite .na {
+    color: #50fa7b
+}
+
+.codehilite .nb {
+    color: #8be9fd;
+    font-style: italic
+}
+
+.codehilite .nc {
+    color: #50fa7b
+}
+
+.codehilite .nd,
+.codehilite .ne,
+.codehilite .ni,
+.codehilite .no {
+    color: #f8f8f2
+}
+
+.codehilite .nf {
+    color: #50fa7b
+}
+
+.codehilite .nl {
+    color: #8be9fd;
+    font-style: italic
+}
+
+.codehilite .nn,
+.codehilite .nx,
+.codehilite .py {
+    color: #f8f8f2
+}
+
+.codehilite .nt {
+    color: #ff79c6
+}
+
+.codehilite .nv {
+    color: #8be9fd;
+    font-style: italic
+}
+
+.codehilite .ow {
+    color: #ff79c6
+}
+
+.codehilite .w {
+    color: #f8f8f2
+}
+
+.codehilite .mb,
+.codehilite .mf,
+.codehilite .mh,
+.codehilite .mi,
+.codehilite .mo {
+    color: #bd93f9
+}
+
+.codehilite .dl,
+.codehilite .s1,
+.codehilite .s2,
+.codehilite .sa,
+.codehilite .sb,
+.codehilite .sc,
+.codehilite .sd,
+.codehilite .se,
+.codehilite .sh,
+.codehilite .si,
+.codehilite .sr,
+.codehilite .ss,
+.codehilite .sx {
+    color: #f1fa8c
+}
+
+.codehilite .bp {
+    color: #f8f8f2;
+    font-style: italic
+}
+
+.codehilite .fm {
+    color: #50fa7b
+}
+
+.codehilite .vc,
+.codehilite .vg,
+.codehilite .vi,
+.codehilite .vm {
+    color: #8be9fd;
+    font-style: italic
+}
+
+.codehilite .il {
+    color: #bd93f9
+}
