--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -1,75 +1,76 @@
 /******************************************************************************
     => MAIN STYLES 
 *******************************************************************************/
-:root{
-  --background-color: hsl(10, 20%, 98%);
-  --foreground-color: hsl(10, 10%, 13%);
-  --primary-color: hsl(200, 90%, 40%); 
-  --highlight-color: hsl(290, 86%, 43%); 
-  --light-color: hsl(10, 10%, 40%);
+:root {
+    --background-color: hsl(10, 20%, 98%);
+    --foreground-color: hsl(10, 10%, 13%);
+    --primary-color: hsl(200, 90%, 40%);
+    --highlight-color: hsl(290, 86%, 43%);
+    --light-color: hsl(10, 10%, 40%);
 }
 
 body {
-  background-color: var(--background-color);
-  color: var(--foreground-color);
-  overflow-y: scroll;
+    background-color: var(--background-color);
+    color: var(--foreground-color);
+    overflow-y: scroll;
 
-  font-family: Source Sans Pro;
-  font-size: 1em;
-  
+    font-family: Source Sans Pro;
+    font-size: 1em;
+
 }
 
 @media only screen and (max-width: 800px) {
-  body {
-    font-size: 1em;
-  }
+    body {
+        font-size: 1em;
+    }
 }
 
 .container {
-  max-width: 80ch;
-  padding: 2em 0;
-  margin: auto;
+    max-width: 80ch;
+    padding: 2em 0;
+    margin: auto;
 }
 
 h1 {
-  margin: 0;
+    margin: 0;
 }
 
 time {
-  color: var(--light-color);
+    color: var(--light-color);
 }
 
 p {
-  line-height: 1.5em;
-  text-align: justify;
+    line-height: 1.5em;
+    text-align: justify;
 }
 
-a, a:visited {
-  color: var(--highlight-color);
-  text-decoration: none;
+a,
+a:visited {
+    color: var(--highlight-color);
+    text-decoration: none;
 }
 
 a:hover {
-  text-decoration: underline;
+    text-decoration: underline;
 }
 
 
 img {
-  max-width: 100%;    
-  cursor: pointer;
+    max-width: 100%;
+    cursor: pointer;
 }
 
 code {
-  font-family: Source Code Pro;
-  font-size: 1em;
+    font-family: Source Code Pro;
+    font-size: 1em;
 }
 
 .codehilite {
-  border: none;
-  border-radius: 5px;
-  overflow-x: auto;
+    border: none;
+    border-radius: 5px;
+    overflow-x: auto;
 }
 
 .codehilite pre {
-  margin: 1em;
+    margin: 1em;
 }
