--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -6,7 +6,7 @@
   --foreground-color: hsl(10, 10%, 13%);
   --light-color: hsl(10, 10%, 40%);
   --primary-color: hsl(290, 86%, 43%);
-  --highlight-color: hsl(200, 90%, 40%);
+  --highlight-color: hsl(290, 57%, 30%);
   --sans-font: "Work Sans";
   --mono-font: "Source Code Pro";
 }
@@ -33,7 +33,7 @@ code {
 }
 
 h1, h2 { margin: 0 0 .3em; }
-h1 { font-size: 3em; }
+h1 { font-size: 3em;}
 h2 { font-size: 1.875em; }
 
 time { color: var(--light-color); }
@@ -54,7 +54,9 @@ a, a:visited {
   color: var(--primary-color); 
 }
 
-a:hover { color: var(--highlight-color); }
+a:hover { 
+  color: var(--highlight-color);
+}
 
 img {
   max-width: 100%;
