--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -3,7 +3,7 @@
  *******************************************************************************/
 @font-face {
   font-family: "Source Code Pro";
-  src: url("https://d3cby5jcb6zmtk.cloudfront.net/fonts/SourceCodePro/SourceCodePro-Regular.otf")
+  src: url("https://d1cx69bx4sg8qk.cloudfront.net/fonts/SourceCodePro/SourceCodePro-Regular.otf")
 }
 
 :root {
